--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include README.md
 recursive-include selia_visualizers/static *
 recursive-include selia_visualizers/templates *
+recursive-include selia_visualizers/locale *
 recursive-include docs *
