--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
+asgiref==3.2.7
 attrs==19.3.0
-Django==2.2.7
-importlib-metadata==0.23
-irekua-database==0.1.1
-irekua-dev-settings==0.1
+Django==3.0.5
+importlib-metadata==1.6.0
+irekua-database==0.1.2
 jsonschema==3.2.0
-more-itertools==7.2.0
-Pillow==6.2.1
-psycopg2-binary==2.8.4
+numpy==1.18.3
+Pillow==7.1.2
+psycopg2-binary==2.8.5
 pycountry==19.8.18
-pyrsistent==0.15.6
+pyrsistent==0.16.0
 pytz==2019.3
-six==1.13.0
-sorl-thumbnail==12.5.0
-sqlparse==0.3.0
-zipp==0.6.0
-
+six==1.14.0
+sorl-thumbnail==12.6.3
+sqlparse==0.3.1
+timezonefinder==4.2.0
+zipp==3.1.0
