--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-asgiref==3.2.7
-attrs==19.3.0
-Django==3.0.5
-importlib-metadata==1.6.0
+asgiref==3.2.10
+attrs==20.2.0
+Django==3.1.1
 irekua-database==0.1.2
+irekua-dev-settings==0.1
 jsonschema==3.2.0
-numpy==1.18.3
-Pillow==7.1.2
-psycopg2-binary==2.8.5
-pycountry==19.8.18
-pyrsistent==0.16.0
-pytz==2019.3
-six==1.14.0
+numpy==1.19.2
+Pillow==7.2.0
+psycopg2-binary==2.8.6
+pycountry==20.7.3
+pyrsistent==0.17.3
+pytz==2020.1
+six==1.15.0
 sorl-thumbnail==12.6.3
 sqlparse==0.3.1
-timezonefinder==4.2.0
-zipp==3.1.0
+timezonefinder==4.4.1
+
